new build, rectify bkup teaser image size for search results.

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -82,7 +82,7 @@
   overflow: hidden;
 
   img {
-    width: 100%;
+    width: 10%; /* original set to 100%, for teaser images in search results. */
   }
 }
 
